cambio en publicaciones

--- a/publicaciones/index.qmd
+++ b/publicaciones/index.qmd
@@ -10,7 +10,7 @@ Haz clic en "[PDF]" para descargar.
 
 ### 2024
 
-- Johnson, L. K., Mahoney, M. J., Domke, G. M., and Beier, C. M. In Review. New allometric models for the USA create a step-change in forest carbon estimation, modeling, and mapping. In review at *Remote Sensing of Environment*. [Enlace](https://arxiv.org/abs/2405.04507) [[PDF]](https://arxiv.org/pdf/2405.04507)
+- Johnsona, L. K., Mahoney, M. J., Domke, G. M., and Beier, C. M. In Review. New allometric models for the USA create a step-change in forest carbon estimation, modeling, and mapping. In review at *Remote Sensing of Environment*. [Enlace](https://arxiv.org/abs/2405.04507) [[PDF]](https://arxiv.org/pdf/2405.04507)
 
 ### 2023
 
