cambio en una publicación

--- a/publicaciones/index.qmd
+++ b/publicaciones/index.qmd
@@ -13,7 +13,7 @@ Clic en "[PDF]" para descargar.
 
 - Darío Colautti. Javier Garcia de Souza. **YOROJO MORENO, Vivian**. Ailen Solanas. Ignacio Garcia. Silvia Plaul. Miriam Maroñas. Eliana Agrelo,. Milagros Gomez. 2025. Proyecto producción de juveniles en la laguna Chis chis. Informe Técnico.  
 
-- Bartha Zulian, Luciano Joaquín. Carnicero Agustín. Colautti Darío. Fajardo Luisa. Llompart Facundo. Servin Ana Cecilia. Veiga Valentina. *YOROJO MORENO, Vivian**. 2025. Relevamiento ambiental e ictiológico de la laguna Chis-Chis (Lezama, Buenos Aires). Informe Técnico.
+- Bartha Zulian, Luciano Joaquín. Carnicero Agustín. Colautti Darío. Fajardo Luisa. Llompart Facundo. Servin Ana Cecilia. Veiga Valentina. **YOROJO MORENO, Vivian**. 2025. Relevamiento ambiental e ictiológico de la laguna Chis-Chis (Lezama, Buenos Aires). Informe Técnico.
 
 
 ### 2024
