--- a/proyectos/index.qmd
+++ b/proyectos/index.qmd
@@ -1,5 +1,10 @@
 ---
-title: "Proyectos"
+title: "Participación en proyectos"
 ---
 
-About this site
+En esta sección presento proyectos de investigación aplicada en los que he participado.fue clave
+
+
+#### 2016
+
+- IV Taller de preparación y lectura de otolitos. Determinación de edades en peces obtenidos en la campaña 2016 del proyecto "Evaluación de los recursos ícticos del bajo río Uruguay y del Río de la Plata Interior y del Proyecto de Evaluación de la salud y calidad de los recursos pesqueros en el Río de la Plata interior y río Uruguay inferior" CARU-CARP. Informe técnico. [PDF](https://www.magyp.gob.ar/sitio/areas/pesca_continental/informes/proyectos_caru/_archivos/000000_Informes%20Proyectos%20CARU/180227_Informe%20CARU-CARP%20Campa%C3%B1a%20de%20Invierno%202016.pdf) 
